<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ans"
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp" />

        <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnclr"
            android:layout_width="180dp"
            android:layout_height="90dp"
            android:text="@string/ce"
          />

            <Button
                android:id="@+id/btnbac"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:text="@string/backspace" />


        </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnmul"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btnmul" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnadd"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btnadd" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btnsub" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btndot"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btndot" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/btneql"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btneql" />

        <Button
            android:id="@+id/btndiv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/btndiv" />

    </LinearLayout>


</LinearLayout>